--- a/customers/templates/customers/customers_set_passwd.html
+++ b/customers/templates/customers/customers_set_passwd.html
@@ -1,18 +1,24 @@
 {% extends 'store/store_base.html' %}
-{% block tab_title %}Nuevo Password{% endblock tab_title %}
+{% load i18n %}
+{% block tab_title %}{% trans "New password" %}{% endblock tab_title %}
 {% block content %}
-    <form class="px-4 py-3" method="post" action="{% url 'customers_set_password_recover' %}">
+    {% include "store/includes/store_message.html" %}
+    <form class="py-3" method="post">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="input_password" class="form-label">Password</label>
-            <input type="password" class="form-control" name="password" id="input_password" placeholder="Password">
+            <label for="input_recovery_code" class="form-label">{% trans "Recovery code" %}</label>
+            <input type="text" class="form-control" name="recovery_code" id="input_recovery_code">
         </div>
         <div class="mb-3">
-            <label for="input_password_2" class="form-label">Password</label>
-            <input type="password" class="form-control" name="password2" id="input_password2" placeholder="Password Confirm" >
+            <label for="input_password" class="form-label">{% trans "Password" %}</label>
+            <input type="password" class="form-control" name="password" id="input_password">
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn" href="{% url 'customers_login' %}">Cancelar</a>
+        <div class="mb-3">
+            <label for="input_password_2" class="form-label">{% trans "Repeat password" %}</label>
+            <input type="password" class="form-control" name="password_2" id="input_password_2">
+        </div>
+        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
     </form>
-
+    <hr>
+    <a class="btn" href="{% url "customers_login" %}">{% trans "Login" %}</a>
 {% endblock content %}
