--- a/customers/templates/customers/customers_login.html
+++ b/customers/templates/customers/customers_login.html
@@ -1,25 +1,25 @@
 {% extends 'store/store_base.html' %}
-{% block tab_title %}Log in{% endblock tab_title %}
+{% load i18n %}
+{% block tab_title %}{% trans "Login" %}{% endblock tab_title %}
 {% block content %}
-    <form class="px-4 py-3" method="post">
+    {% include "store/includes/store_message.html" %}
+    <form class="py-3" method="post">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="input_email" class="form-label">Email address</label>
+            <label for="input_email" class="form-label">{% trans "Email address" %}</label>
             <input type="email" class="form-control" name="email" id="input_email" placeholder="email@example.com" required>
         </div>
         <div class="mb-3">
-            <label for="input_password" class="form-label">Password</label>
+            <label for="input_password" class="form-label">{% trans "Password" %}</label>
             <input type="password" class="form-control" name="password" id="input_password" placeholder="Password" required>
         </div>
         <div class="mb-3">
-            <label for="input_master_key" class="form-label">PIN seguridad</label>
-            <input type="number" class="form-control" step="1" min="100000" max="999999" name="master_key" id="input_master_key" required placeholder="Master Key">
+            <label for="input_master_key" class="form-label">{% trans "Master key" %}</label>
+            <input type="text" class="form-control" name="master_key" id="input_master_key" required>
         </div>
-        <button type="submit" class="btn btn-primary">Entrar</button>
-        <a class="btn" href="{% url 'customers_register' %}">Registrarse</a>
-        <a class="btn" href="{% url 'customers_forgot_passwd' %}">Olvido Password?</a>
-        <hr>
-        <p>Testing rollback</p>
+        <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
     </form>
-
+    <hr>
+    <a class="btn" href="{% url 'customers_register' %}">{% trans "Register" %}</a>
+    <a class="btn" href="{% url 'customers_forgot_passwd' %}">{% trans "Forgot password?" %}</a>
 {% endblock content %}
