--- a/store/templates/store/includes/store_base/header.html
+++ b/store/templates/store/includes/store_base/header.html
@@ -10,27 +10,34 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="passwords_dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% trans "Passwords" %}
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="passwords_dropdown">
                             <li><a class="dropdown-item" href="{% url 'store_view_passwds' %}">{% trans "View passwords" %}</a></li>
                             <li><a class="dropdown-item" href="{% url 'store_add_passwd' %}">{% trans "Add password" %}</a></li>
                             <li><a class="dropdown-item" href="{% url 'store_view_shared_passwds' %}">{% trans "Shared passwords" %}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="containers_dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% trans "Containers" %}
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="containers_dropdown">
                             <li><a class="dropdown-item" href="{% url 'store_view_containers' %}">{% trans "View containers" %}</a></li>
                             <li><a class="dropdown-item" href="{% url 'store_add_container' %}">{% trans "Add container" %}</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'customers_profile' %}">{% trans "My profile" %}</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id=profile_dropdown role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {% trans "My account" %}
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="profile_dropdown">
+                            <li><a class="dropdown-item" href="{% url 'customers_profile' %}">{% trans "Profile" %}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'customers_ips_management' %}">{% trans "IPs management" %}</a></li>
+                        </ul>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'customers_logout' %}">{% trans "Logout" %}</a>
                     </li>
